[gd_scene load_steps=14 format=3 uid="uid://cpnnesgtrk10c"]

[ext_resource type="Script" uid="uid://cokpqpvdgn760" path="res://assets/scripts/gameoverlay.gd" id="1_2yfrr"]
[ext_resource type="PackedScene" uid="uid://bjll7yyctovk" path="res://assets/instances/RewindButton.tscn" id="1_jfk2d"]
[ext_resource type="PackedScene" uid="uid://dqhtbsw0356gd" path="res://assets/instances/ChangeLevelButton.tscn" id="2_6xujs"]
[ext_resource type="Theme" uid="uid://bb0w3sec3s53g" path="res://themes/StartWaveButton.tres" id="4_1h65b"]
[ext_resource type="PackedScene" uid="uid://cihy30gx44gmt" path="res://assets/instances/Lives.tscn" id="4_cygdo"]
[ext_resource type="Theme" uid="uid://bjuef82huajdy" path="res://themes/SettingButton.tres" id="5_wwd5g"]
[ext_resource type="Texture2D" uid="uid://runf2rlmtdii" path="res://assets/graphics/images/Window_2.png" id="6_d87td"]
[ext_resource type="Theme" uid="uid://byop12yj2qjbk" path="res://themes/BackButton.tres" id="7_1h65b"]
[ext_resource type="Texture2D" uid="uid://b6sl1c08txg88" path="res://assets/graphics/images/Music_BTN.png" id="8_qovfg"]
[ext_resource type="Theme" uid="uid://fjrynb4k8npl" path="res://themes/OKButton.tres" id="9_jx0ji"]
[ext_resource type="Texture2D" uid="uid://b22ydhhkdx4w0" path="res://assets/graphics/images/Sound_BTN.png" id="10_iktii"]
[ext_resource type="PackedScene" uid="uid://bijaf35alms5m" path="res://assets/instances/Gameover.tscn" id="11_d87td"]
[ext_resource type="Texture2D" uid="uid://bvrg2xfph6f87" path="res://assets/graphics/images/Stats_Bar.png" id="13_qovfg"]

[node name="GameOverlay" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_2yfrr")

[node name="RewindButton" parent="." instance=ExtResource("1_jfk2d")]
layout_mode = 0
offset_left = 647.0
offset_top = 2.0
offset_right = 704.0
offset_bottom = 59.0

[node name="ChangeLevelButton" parent="." instance=ExtResource("2_6xujs")]
layout_mode = 0
offset_left = 617.0
offset_top = 4.0
offset_right = 617.0
offset_bottom = 4.0

[node name="MoneyLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = 75.0
offset_right = 45.0
offset_bottom = 103.0
grow_vertical = 2

[node name="StartWaveButton" type="Button" parent="."]
layout_mode = 1
offset_left = 266.0
offset_top = 175.0
offset_right = 525.011
offset_bottom = 267.0
theme = ExtResource("4_1h65b")
expand_icon = true

[node name="WavesCompletedLabel" type="Label" parent="StartWaveButton"]
z_index = 30
layout_mode = 1
offset_left = -184.0
offset_top = 233.0
offset_right = 51.0
offset_bottom = 254.0
scale = Vector2(0.7, 0.7)
text = "Waves completed: "

[node name="nWaves" type="Label" parent="StartWaveButton/WavesCompletedLabel"]
layout_mode = 0
offset_left = 231.0
offset_top = 1.0
offset_right = 271.0
offset_bottom = 24.0

[node name="EnemiesKilledLabel" type="Label" parent="StartWaveButton"]
z_index = 30
layout_mode = 1
offset_left = 250.0
offset_top = 233.0
offset_right = 433.0
offset_bottom = 256.0
scale = Vector2(0.7, 0.7)
text = "Enemies killed:"

[node name="nEnemies" type="Label" parent="StartWaveButton/EnemiesKilledLabel"]
layout_mode = 0
offset_left = 184.0
offset_right = 225.0
offset_bottom = 25.0

[node name="EnimiesLeftLabel" type="Label" parent="."]
z_index = 50
layout_mode = 1
offset_left = 312.0
offset_top = 408.0
offset_right = 481.0
offset_bottom = 429.0
scale = Vector2(0.7, 0.7)
text = "Enemies left: "

[node name="nEnimiesLabel" type="Label" parent="EnimiesLeftLabel"]
layout_mode = 0
offset_left = 166.0
offset_top = 1.0
offset_right = 206.0
offset_bottom = 24.0

[node name="Lives" parent="." instance=ExtResource("4_cygdo")]
layout_mode = 0
offset_left = 1.0
offset_top = -1.0
offset_right = 1.0
offset_bottom = -1.0
scale = Vector2(0.8, 0.8)

[node name="SettingsButton" type="Button" parent="."]
layout_mode = 0
offset_left = 707.0
offset_top = 2.0
offset_right = 764.0
offset_bottom = 59.0
theme = ExtResource("5_wwd5g")
expand_icon = true

[node name="SettingsPanel" type="Panel" parent="."]
visible = false
z_index = 100
layout_mode = 0
offset_left = 24.0
offset_top = -59.0
offset_right = 64.0
offset_bottom = -19.0

[node name="TextureRect" type="TextureRect" parent="SettingsPanel"]
layout_mode = 0
offset_left = 224.0
offset_top = 80.0
offset_right = 501.0
offset_bottom = 468.155
texture = ExtResource("6_d87td")
expand_mode = 1

[node name="BackButton" type="Button" parent="SettingsPanel/TextureRect"]
layout_mode = 0
offset_left = 45.0
offset_top = 289.0
offset_right = 115.0
offset_bottom = 359.0
theme = ExtResource("7_1h65b")
expand_icon = true

[node name="MusicSlider" type="HSlider" parent="SettingsPanel/TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.418
anchor_top = 0.265
anchor_right = -0.418
anchor_bottom = 0.265
offset_left = 191.786
offset_top = -68.861
offset_right = 364.786
offset_bottom = 17.139

[node name="MusicIcon" type="Sprite2D" parent="SettingsPanel/TextureRect"]
position = Vector2(45, 78)
scale = Vector2(0.204762, 0.204762)
texture = ExtResource("8_qovfg")

[node name="OKButton" type="Button" parent="SettingsPanel/TextureRect"]
layout_mode = 0
offset_left = 153.0
offset_top = 289.0
offset_right = 223.0
offset_bottom = 359.0
theme = ExtResource("9_jx0ji")
expand_icon = true

[node name="SettingsName" type="Sprite2D" parent="SettingsPanel/TextureRect"]

[node name="Sound" type="Sprite2D" parent="SettingsPanel/TextureRect"]
position = Vector2(45, 138)
scale = Vector2(0.209524, 0.209524)
texture = ExtResource("10_iktii")

[node name="VolumeSlider" type="HSlider" parent="SettingsPanel/TextureRect"]
layout_mode = 0
offset_left = 75.0
offset_top = 122.0
offset_right = 251.0
offset_bottom = 154.0

[node name="Gameover" parent="." instance=ExtResource("11_d87td")]
layout_mode = 0

[node name="Stats" type="Sprite2D" parent="."]
position = Vector2(384, 416)
scale = Vector2(0.584491, 0.39375)
texture = ExtResource("13_qovfg")

[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="SettingsPanel/TextureRect/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="SettingsPanel/TextureRect/OKButton" to="." method="_on_ok_button_pressed"]
